# wzoj-judger

./: .gitignore  Makefile.am  Makefile.in  README  configure.ac  default-install.sh
doc/: config.json.example
src/: Makefile.am  Makefile.in  daemon.cc  http.cc  judger.cc  main.cc  okcalls32.h  okcalls64.h  sim.cc  udp-listen.cc  version.cc  wzoj-judger.h
