## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir). \
	$(jsoncpp_CFLAGS). \
	$(jsoncpp_CFLAGS)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = wzoj_judger

wzoj_judger_SOURCES = \
	main.cc \
	wzoj-judger.h \
	version.cc \
	daemon.cc \
	http.cc \
	jsoncpp.cpp \
	json/json-forwards.h \
	json/json.h

wzoj_judger_CXXFLAGS = -I/home/massimo/D/proj/wzoj-judger/include 

wzoj_judger_LDFLAGS = 


